--- a/styles.css
+++ b/styles.css
@@ -39,10 +39,10 @@ a {
 
 #header {
     margin-left: 40px;
-    color: black;
+    color: white;
     font-weight: bold;
     font-size: 30px;
-    -webkit-text-stroke: 0.5px white;
+    -webkit-text-stroke: 0.5px gold;
 }
 
 .listdiv {
