--- a/styles.css
+++ b/styles.css
@@ -61,6 +61,13 @@ a {
     text-align: center;
     background-color: black;
     color: white;
+    border-radius: 8px;
+}
+
+.chickendiv:hover, .piediv:hover, .cookiediv:hover {
+    z-index: 1;
+    box-shadow: 0 8px 50px rgba(0,0,0,0.2);
+    transform: scale(1.05);
 }
 
 .bodydiv {
