--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ p {
 }
 
 a {
-    color: white;
+    color: black;
 }
 
 .headerdiv {
@@ -59,8 +59,7 @@ a {
     flex-direction: column;
     flex-grow: 0;
     text-align: center;
-    background-color: black;
-    color: white;
+    background-color: #D1C9C9;
     border-radius: 8px;
 }
 
