--- a/styles.css
+++ b/styles.css
@@ -18,11 +18,12 @@ img {
     width: 225px;
     height: 225px;
     margin: 14px;
-    border: solid 2px white;
+    border: 2px solid gold;
 }
 
 p {
     margin-top: 0px;
+    color: goldenrod;
 }
 
 a {
@@ -59,8 +60,9 @@ a {
     flex-direction: column;
     flex-grow: 0;
     text-align: center;
-    background-color: #D1C9C9;
+    background-color: black;
     border-radius: 8px;
+    border: 2px solid gold;
 }
 
 .card:hover {
@@ -80,8 +82,6 @@ a {
 .foodimg {
     max-width: 225px;
     max-height: 225px;
-    border: 2px solid lightgray;
-    
 }
 
 .description {
