--- a/styles.css
+++ b/styles.css
@@ -65,6 +65,7 @@ a {
     border: 2px solid gold;
 }
 
+/*Copy and paste these same styles anytime something needs to POP and have a bit of pizzaz*/
 .card:hover {
     z-index: 1;
     box-shadow: 0 8px 50px rgba(0,0,0,0.2);
