Comment for text highlight style in CSS file

--- a/styles.css
+++ b/styles.css
@@ -44,6 +44,7 @@ a {
     color: white;
     font-weight: bold;
     font-size: 30px;
+    /*Adds a colored outline effect to any text it is applied to*/
     -webkit-text-stroke: 0.5px gold;
 }
 
