--- a/styles.css
+++ b/styles.css
@@ -68,6 +68,10 @@ a {
 }
 
 /*Copy and paste these same styles anytime something needs to POP and have a bit of pizzaz*/
+
+/*The index property will make the card appear ontop of the other html elements that are in the space that it occupies*/
+/*The box shadow property will make the box have a slight shadow at an angle while the box is hovering*/
+/*The transform property will have the card appear slightly larger than normal and by increasing it's dimensions by .05%*/
 .card:hover {
     z-index: 1;
     box-shadow: 0 8px 50px rgba(0,0,0,0.2);
