--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ img {
     width: 225px;
     height: 225px;
     margin: 14px;
-    border: 2px solid gold;
+    border: 2px solid lightgray;
 }
 
 ul {
@@ -28,7 +28,7 @@ a {
 
 #cardLabels {
     margin-top: 0px;
-    color: goldenrod;
+    color: black;
 }
 
 .headerdiv {
@@ -44,7 +44,7 @@ a {
     color: white;
     font-weight: bold;
     font-size: 30px;
-    -webkit-text-stroke: 0.5px gold;
+    -webkit-text-stroke: 0.5px lightgray;
 }
 
 .listdiv {
@@ -61,9 +61,9 @@ a {
     flex-direction: column;
     flex-grow: 0;
     text-align: center;
-    background-color: black;
+    background-color: whitesmoke;
     border-radius: 8px;
-    border: 2px solid gold;
+    border: 3px solid lightgray;
 }
 
 .card:hover {
